charts/internal/shoot-control-plane/templates/node-init.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-init
  namespace: kube-system
  labels:
    app: node-init
spec:
  selector:
    matchLabels:
      app: node-init
  template:
    metadata:
      labels:
        app: node-init
    spec:
      serviceAccount: node-init
      serviceAccountName: node-init
      containers:
      - name: node-init-pause
        image: k8s.gcr.io/pause:3.3
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 0m
            memory: 1Mi
      hostNetwork: true
